--- a/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -228,6 +228,7 @@ K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2N
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
 A_InteractableTest_C=
 StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+A_GrapableBase_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonAdventure/Maps/L_FirstPerson
@@ -236,15 +237,14 @@ LastLevel=/Game/FirstPersonAdventure/Maps/L_FirstPerson
 CleanShutdown=False
 OpenAssetsAtExit=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/AC_InteractionSystem.AC_InteractionSystem
 OpenAssetsAtExit=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_Interactable.I_Interactable
-OpenAssetsAtExit=/Game/FirstPersonAdventure/Blueprints/Core/PC_FirstPerson.PC_FirstPerson
-OpenAssetsAtExit=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_InteractableTest.A_InteractableTest
+OpenAssetsAtExit=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_GrapableBase.A_GrapableBase
 
 [DetailPropertyExpansion]
 WorldSettings="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 Info="\"Object.WorldPartitionSetup.WorldPartition.Object.WorldPartition\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
 GameplayTagsSettings="\"Object\" "
@@ -340,10 +340,10 @@ K2Node_InputAction="\"Object\" "
 K2Node_GetInputAxisValue="\"Object\" "
 K2Node_CallFunction="\"Object\" "
 CharacterMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-PawnMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-NavMovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-MovementComponent="\"Object\" \"Object.Character Movement (Rotation Settings).RotationRate\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object\" "
+PawnMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 C_FirstPerson_C="\"Object\" "
 Character="\"Object\" "
 Pawn="\"Object\" "
@@ -359,6 +359,7 @@ Blueprint="\"Object\" "
 BlueprintCore="\"Object\" "
 StaticMeshComponent="\"Object\" "
 MeshComponent="\"Object\" "
+FloatingPawnMovement="\"Object\" \"Object.NavMovement.NavAgentProps\" "
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -417,16 +418,17 @@ ContentBrowserDrawer.CurrentViewType=1
 
 [ContentBrowserRecent]
 MRUItem0=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_Door
-MRUItem1=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_InteractableTest
-MRUItem2=/Game/FirstPersonAdventure/Blueprints/Core/PC_FirstPerson
-MRUItem3=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_Interactable
-MRUItem4=/Game/FirstPersonAdventure/Blueprints/Core/C_FirstPerson
-MRUItem5=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/AC_InteractionSystem
-MRUItem6=/Game/FirstPersonAdventure/Maps/L_FirstPerson
-MRUItem7=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_InteractionSystem
-MRUItem8=/Game/FirstPersonAdventure/Blueprints/C_FirstPerson
-MRUItem9=/Game/FirstPersonAdventure/Blueprints/PC_FirstPerson
-MRUItem10=/Game/FirstPersonAdventure/Blueprints/GM_FirstPerson
+MRUItem1=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_GrapableBase
+MRUItem2=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_Interactable
+MRUItem3=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/AC_InteractionSystem
+MRUItem4=/Game/FirstPersonAdventure/Maps/L_FirstPerson
+MRUItem5=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_InteractableTest
+MRUItem6=/Game/FirstPersonAdventure/Blueprints/Core/PC_FirstPerson
+MRUItem7=/Game/FirstPersonAdventure/Blueprints/Core/C_FirstPerson
+MRUItem8=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_InteractionSystem
+MRUItem9=/Game/FirstPersonAdventure/Blueprints/C_FirstPerson
+MRUItem10=/Game/FirstPersonAdventure/Blueprints/PC_FirstPerson
+MRUItem11=/Game/FirstPersonAdventure/Blueprints/GM_FirstPerson
 
 [DetailCategories]
 GM_FirstPerson_C.Tick=True
@@ -893,6 +895,35 @@ A_Door_C.HLOD=True
 A_Door_C.WorldPartition=True
 A_Door_C.Events=True
 A_Door_C.TransformCommon=True
+A_GrapableBase_C.Actor=True
+A_GrapableBase_C.Tick=True
+A_GrapableBase_C.Replication=True
+A_GrapableBase_C.Rendering=True
+A_GrapableBase_C.Collision=True
+A_GrapableBase_C.Input=True
+A_GrapableBase_C.HLOD=True
+A_GrapableBase_C.WorldPartition=True
+A_GrapableBase_C.Events=True
+A_GrapableBase_C.TransformCommon=True
+A_GrapableBase_C.StaticMesh=True
+A_GrapableBase_C.Materials=True
+A_GrapableBase_C.Physics=True
+A_GrapableBase_C.Lighting=True
+A_GrapableBase_C.Navigation=True
+A_GrapableBase_C.VirtualTexture=True
+A_GrapableBase_C.Tags=True
+A_GrapableBase_C.Cooking=True
+A_GrapableBase_C.Config=True
+FloatingPawnMovement.FloatingPawnMovement=True
+FloatingPawnMovement.NavMovement=True
+FloatingPawnMovement.Velocity=True
+FloatingPawnMovement.PlanarMovement=True
+FloatingPawnMovement.MovementComponent=True
+FloatingPawnMovement.Tags=True
+FloatingPawnMovement.ComponentReplication=True
+FloatingPawnMovement.Activation=True
+FloatingPawnMovement.Variable=True
+FloatingPawnMovement.Cooking=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -969,6 +1000,7 @@ WmfMediaSettings=True
 
 [DetailCategoriesAdvanced]
 InputSettings.Bindings=False
+A_GrapableBase_C.Collision=False
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonAdventure/Blueprints/GM_FirstPerson.GM_FirstPerson=0
@@ -980,6 +1012,8 @@ InputSettings.Bindings=False
 /Game/FirstPersonAdventure/Blueprints/Core/PC_FirstPerson.PC_FirstPerson=0
 /Game/FirstPersonAdventure/Blueprints/Core/C_FirstPerson.C_FirstPerson=0
 /Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_Interactable.I_Interactable=0
+/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_InteractableTest.A_InteractableTest=0
+/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_Door.A_Door=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1958,6 +1992,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 DeleteConfirmationVariable_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_GrapableBase.A_GrapableBase;
 RecentlyPlaced=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_Door.A_Door;
 RecentlyPlaced=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_InteractableTest.A_InteractableTest;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
