--- a/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -266,7 +266,7 @@ GetCameraForwardPosition=K2Node_VariableGet.DefaultValueCategory.CharacterMoveme
 LastLevel=/Game/FirstPersonAdventure/Maps/L_FirstPerson
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailPropertyExpansion]
 WorldSettings=
@@ -425,6 +425,9 @@ InputTriggerTimedBase="\"Object\" "
 InputTriggerHoldAndRelease="\"Object\" "
 InputTriggerTap="\"Object\" "
 InputTriggerPulse="\"Object\" "
+CutMeshWithMeshToolProperties="\"Object\" "
+InteractiveToolPropertySet="\"Object\" "
+TransformInputsToolProperties="\"Object\" "
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -1149,6 +1152,10 @@ A_Grapable_Base_C.Actor=True
 PreviewMaterial.NotVisible=True
 PreviewMaterial.Nanite=True
 Brush.Networking=True
+CutMeshWithMeshToolProperties.Boolean=True
+CutMeshWithMeshToolProperties.Display=True
+CutMeshWithMeshToolProperties.Materials=True
+TransformInputsToolProperties.Transform=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
