worked on blockout
-rooms in main temple are finished
- connection to second temple is finished

--- a/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -266,7 +266,7 @@ GetCameraForwardPosition=K2Node_VariableGet.DefaultValueCategory.CharacterMoveme
 LastLevel=/Game/FirstPersonAdventure/Maps/L_FirstPerson
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailPropertyExpansion]
 WorldSettings=
