--- a/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -261,6 +261,10 @@ MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 Blueprint=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
 GetCameraForwardPosition=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
+A_Spline_Base_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
+UserConstructionScript=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
+UserConstructionScript_0=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
+SplineMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,K2Node_VariableGet.DefaultValueCategory.InteractableObjectTypes,
 
 [EditorStartup]
 LastLevel=/Game/FirstPersonAdventure/Maps/L_FirstPerson
@@ -431,6 +435,8 @@ TransformInputsToolProperties="\"Object\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 AssetViewerSettings="\"Object\" "
+SplineComponent="\"Object\" "
+SplineMeshComponent="\"Object\" "
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -452,7 +458,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonAdventure/Materials
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonAdventure/Blueprints/InteractionSystem
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -488,24 +494,26 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Engine/BasicShapes/Cube
-MRUItem1=/Game/FirstPersonAdventure/Maps/L_FirstPerson
-MRUItem2=/Game/FirstPersonAdventure/Materials/M_Gold
-MRUItem3=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/FL_InteractionSystem
-MRUItem4=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_GrapableBase
-MRUItem5=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_Interactable
-MRUItem6=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/AC_InteractionSystem
-MRUItem7=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_InteractionSystem
-MRUItem8=/Game/FirstPersonAdventure/Materials/M_Wall
-MRUItem9=/Game/FirstPersonAdventure/Materials/M_Floor
-MRUItem10=/Game/FirstPersonAdventure/Textures/TempelGrundriss_Mat
-MRUItem11=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_Door
-MRUItem12=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_InteractableTest
-MRUItem13=/Game/FirstPersonAdventure/Blueprints/Core/PC_FirstPerson
-MRUItem14=/Game/FirstPersonAdventure/Blueprints/Core/C_FirstPerson
-MRUItem15=/Game/FirstPersonAdventure/Blueprints/C_FirstPerson
-MRUItem16=/Game/FirstPersonAdventure/Blueprints/PC_FirstPerson
-MRUItem17=/Game/FirstPersonAdventure/Blueprints/GM_FirstPerson
+MRUItem0=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/AC_InteractionSystem
+MRUItem1=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Fence
+MRUItem2=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Base
+MRUItem3=/Game/FirstPersonAdventure/Maps/L_FirstPerson
+MRUItem4=/Engine/BasicShapes/Cube
+MRUItem5=/Game/FirstPersonAdventure/Materials/M_Gold
+MRUItem6=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/FL_InteractionSystem
+MRUItem7=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_GrapableBase
+MRUItem8=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_Interactable
+MRUItem9=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/I_InteractionSystem
+MRUItem10=/Game/FirstPersonAdventure/Materials/M_Wall
+MRUItem11=/Game/FirstPersonAdventure/Materials/M_Floor
+MRUItem12=/Game/FirstPersonAdventure/Textures/TempelGrundriss_Mat
+MRUItem13=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_Door
+MRUItem14=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/A_InteractableTest
+MRUItem15=/Game/FirstPersonAdventure/Blueprints/Core/PC_FirstPerson
+MRUItem16=/Game/FirstPersonAdventure/Blueprints/Core/C_FirstPerson
+MRUItem17=/Game/FirstPersonAdventure/Blueprints/C_FirstPerson
+MRUItem18=/Game/FirstPersonAdventure/Blueprints/PC_FirstPerson
+MRUItem19=/Game/FirstPersonAdventure/Blueprints/GM_FirstPerson
 
 [DetailCategories]
 GM_FirstPerson_C.Tick=True
@@ -1170,6 +1178,57 @@ StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.RayTracing=True
 StaticMesh.Navigation=True
+A_Spline_Base_C.Tick=True
+A_Spline_Base_C.Replication=True
+A_Spline_Base_C.Rendering=True
+A_Spline_Base_C.Collision=True
+A_Spline_Base_C.Actor=True
+A_Spline_Base_C.Input=True
+A_Spline_Base_C.HLOD=True
+A_Spline_Base_C.Physics=True
+A_Spline_Base_C.WorldPartition=True
+A_Spline_Base_C.Events=True
+SplineComponent.Variable=True
+SplineComponent.TransformCommon=True
+SplineComponent.Sockets=True
+SplineComponent.Selected Points=True
+SplineComponent.Spline=True
+SplineComponent.Editor=True
+SplineComponent.ComponentTick=True
+SplineComponent.HLOD=True
+SplineComponent.Navigation=True
+SplineComponent.Tags=True
+SplineComponent.ComponentReplication=True
+SplineComponent.Activation=True
+SplineComponent.Cooking=True
+SplineComponent.Events=True
+SplineMeshComponent.TransformCommon=True
+SplineMeshComponent.StaticMesh=True
+SplineMeshComponent.SplineMesh=True
+SplineMeshComponent.Spline=True
+SplineMeshComponent.Collision=True
+SplineMeshComponent.Lighting=True
+SplineMeshComponent.Rendering=True
+SplineMeshComponent.HLOD=True
+SplineMeshComponent.Navigation=True
+SplineMeshComponent.VirtualTexture=True
+SplineMeshComponent.Tags=True
+SplineMeshComponent.ComponentReplication=True
+SplineMeshComponent.Variable=True
+SplineMeshComponent.Cooking=True
+A_Spline_Fence_C.Default=True
+A_Spline_Fence_C.Tick=True
+A_Spline_Fence_C.Replication=True
+A_Spline_Fence_C.Rendering=True
+A_Spline_Fence_C.Collision=True
+A_Spline_Fence_C.Actor=True
+A_Spline_Fence_C.Input=True
+A_Spline_Fence_C.HLOD=True
+A_Spline_Fence_C.Physics=True
+A_Spline_Fence_C.WorldPartition=True
+A_Spline_Fence_C.Events=True
+A_Spline_Fence_C.TransformCommon=True
+A_Spline_Fence_C.Networking=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1281,6 +1340,8 @@ A_GrapableBase_C.Collision=False
 /Game/FirstPersonAdventure/Blueprints/InteractionSystem/FL_InteractionSystem.FL_InteractionSystem=0
 /Game/FirstPersonAdventure/Materials/M_Gold.M_Gold=1
 /Engine/BasicShapes/Cube.Cube=1
+/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Fence.A_Spline_Fence=0
+/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Base.A_Spline_Base=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2387,6 +2448,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 DeleteConfirmationVariable_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Fence.A_Spline_Fence;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
