--- a/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/HTK4B_FP/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -458,7 +458,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/FirstPersonAdventure/Blueprints/InteractionSystem
+ContentBrowserTab1.SelectedPaths=/Game/FirstPersonAdventure/Maps
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -494,10 +494,10 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/AC_InteractionSystem
-MRUItem1=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Fence
-MRUItem2=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Base
-MRUItem3=/Game/FirstPersonAdventure/Maps/L_FirstPerson
+MRUItem0=/Game/FirstPersonAdventure/Maps/L_FirstPerson
+MRUItem1=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/AC_InteractionSystem
+MRUItem2=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Fence
+MRUItem3=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Base
 MRUItem4=/Engine/BasicShapes/Cube
 MRUItem5=/Game/FirstPersonAdventure/Materials/M_Gold
 MRUItem6=/Game/FirstPersonAdventure/Blueprints/InteractionSystem/FL_InteractionSystem
@@ -1229,6 +1229,15 @@ A_Spline_Fence_C.WorldPartition=True
 A_Spline_Fence_C.Events=True
 A_Spline_Fence_C.TransformCommon=True
 A_Spline_Fence_C.Networking=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2448,6 +2457,7 @@ RecentsFiles=C:/Program Files/Epic Games/UE_5.0/Engine/Plugins/Animation/Control
 DeleteConfirmationVariable_Warning=False
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/FirstPersonAdventure/Blueprints/LevelTools/A_Spline_Fence.A_Spline_Fence;
 RecentlyPlaced=/Engine/BasicShapes/Cone.Cone;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Engine/BasicShapes/Cylinder.Cylinder;/Engine/Transient.ActorFactoryBasicShape_0
